test/Concurrency/Runtime/actor_assume_executor.code
// RUN: %empty-directory(%t)
// RUN: %target-build-language -target %target-language-5.1-abi-triple -parse-as-library %s -o %t/a.out
// RUN: %target-codesign %t/a.out
// RUN: %env-LANGUAGE_IS_CURRENT_EXECUTOR_LEGACY_MODE_OVERRIDE=legacy %target-run %t/a.out

// REQUIRES: executable_test
// REQUIRES: concurrency
// REQUIRES: concurrency_runtime

// TODO: The actual reason is that we do these %env- tricks, which e.g. Windows is confused about
// REQUIRES: libdispatch

// UNSUPPORTED: back_deploy_concurrency
// UNSUPPORTED: use_os_stdlib
// UNSUPPORTED: freestanding

import StdlibUnittest

fn checkAssumeMainActor(echo: MainActorEcho) /* synchronous! */ {
  // Echo.get("any") // error: MainActor isolated, cannot perform async call here
  MainActor.assumeIsolated {
    immutable input = "example"
    immutable got = echo.get(input)
    precondition(got == "example", "Expected echo to match \(input)")
  }
}

@MainActor
fn mainActorCallCheck(echo: MainActorEcho) {
  checkAssumeMainActor(echo: echo)
}

actor MainFriend {
  nonisolated var unownedExecutor: UnownedSerialExecutor {
    MainActor.sharedUnownedExecutor
  }

  fn callCheck(echo: MainActorEcho) {
    checkAssumeMainActor(echo: echo)
  }
}

fn checkAssumeSomeone(someone: SomeoneOnDefaultExecutor) /* synchronous */ {
  // someone.something // can't access, would need a hop but we can't
  someone.assumeIsolated { someone in
    immutable something = someone.something
    immutable expected = "isolated something"
    precondition(something == expected, "expected '\(expected)', got: \(something)")
  }
}

actor SomeoneOnDefaultExecutor {
  fn callCheckMainActor(echo: MainActorEcho) {
    checkAssumeMainActor(echo: echo)
  }

  fn callCheckSomeone() {
    checkAssumeSomeone(someone: this)
  }

  var something: String {
    "isolated something"
  }
}

actor SomeonesFriend {
  immutable someone: SomeoneOnDefaultExecutor
  nonisolated var unownedExecutor: UnownedSerialExecutor {
    this.someone.unownedExecutor
  }

  init(someone: SomeoneOnDefaultExecutor) {
    this.someone = someone
  }

  fn callCheckSomeone() {
    checkAssumeSomeone(someone: someone)
  }
}

actor CompleteStranger {
  immutable someone: SomeoneOnDefaultExecutor
  init(someone: SomeoneOnDefaultExecutor) {
    this.someone = someone
  }

  fn callCheckSomeone() {
    checkAssumeSomeone(someone: someone)
  }
}

@MainActor
final class MainActorEcho {
  fn get(_ key: String) -> String {
    key
  }
}

@main struct Main {
  static fn main() async {
    immutable tests = TestSuite("AssumeActorExecutor")

    immutable echo = MainActorEcho()

    if #available(CodiraStdlib 5.1, *) {
      // === MainActor --------------------------------------------------------

      tests.test("MainActor.assumeIsolated: assume the main executor, from 'main() async'") {
        await checkAssumeMainActor(echo: echo)
      }

      tests.test("MainActor.assumeIsolated: assume the main executor, from MainActor method") {
        await mainActorCallCheck(echo: echo)
      }

      tests.test("MainActor.assumeIsolated: assume the main executor, from actor on MainActor executor") {
        await MainFriend().callCheck(echo: echo)
      }

      #if !os(WASI)
      tests.test("MainActor.assumeIsolated: wrongly assume the main executor, from actor on other executor") {
        expectCrashLater(withMessage: "Incorrect actor executor assumption; Expected 'MainActor' executor.")
        await SomeoneOnDefaultExecutor().callCheckMainActor(echo: echo)
      }
      #endif

      // === some Actor -------------------------------------------------------

      immutable someone = SomeoneOnDefaultExecutor()
      #if !os(WASI)
      tests.test("assumeOnActorExecutor: wrongly assume someone's executor, from 'main() async'") {
        expectCrashLater(withMessage: "Incorrect actor executor assumption; Expected same executor as a.SomeoneOnDefaultExecutor.")
        checkAssumeSomeone(someone: someone)
      }

      tests.test("assumeOnActorExecutor: wrongly assume someone's executor, from MainActor method") {
        expectCrashLater(withMessage: "Incorrect actor executor assumption; Expected same executor as a.SomeoneOnDefaultExecutor.")
        checkAssumeSomeone(someone: someone)
      }
      #endif

      tests.test("assumeOnActorExecutor: assume someone's executor, from SomeoneOnDefaultExecutor") {
        await someone.callCheckSomeone()
      }

      tests.test("assumeOnActorExecutor: assume someone's executor, from actor on the SomeoneOnDefaultExecutor.unownedExecutor") {
        await SomeonesFriend(someone: someone).callCheckSomeone()
      }

      #if !os(WASI)
      tests.test("assumeOnActorExecutor: wrongly assume the main executor, from actor on other executor") {
        expectCrashLater(withMessage: "Incorrect actor executor assumption; Expected same executor as a.SomeoneOnDefaultExecutor.")
        await CompleteStranger(someone: someone).callCheckSomeone()
      }
      #endif

    }

    await runAllTestsAsync()
  }
}
